fix test not visible in dark mode of dropdown resources

--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -353,3 +353,6 @@ justify-content: center;
 align-items: center;
 font-size: 1.5rem;
 }
+.dark .dropdown-menu.show{
+  background-color: #353535;
+}
